--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "react": "^18.2.0",
-    "react-anchor-link-smooth-scroll": "^1.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.5.2",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0"
   },
   "devDependencies": {
